--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "scripts": {
     "build": "rm -rf lib/* && babel src/ -d lib/ && node gen-flow-files.js",
-    "prepublish": "yarn run build"
+    "prepublish": "yarn run build",
+    "prettier-run": "prettier --write 'src/**/*.js'",
+    "prettier-watch": "onchange 'src/**/*.js' -- prettier --write {{changed}}"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -14,6 +16,7 @@
     "flow-bin": "^0.61.0",
     "mocha": "^4.0.1",
     "nyc": "^11.4.1",
+    "onchange": "^3.3.0",
     "prettier": "1.10.2"
   },
   "dependencies": {}
