--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.61.0",
-    "mocha": "^4.0.1",
+    "flow-bin": "^0.64.0",
+    "mocha": "^5.0.0",
     "nyc": "^11.4.1",
     "onchange": "^3.3.0",
-    "prettier": "1.10.2"
+    "prettier": "^1.10.2"
   },
   "dependencies": {}
 }
